# hdlparse

./: .btd.yml  .gitignore  MANIFEST.in  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: Test.yml
_sources/: index.rst.txt
_sources/apidoc/: hdlparse.rst.txt
apidoc/: hdlparse.html  modules.html
doc/: Makefile  about.rst  conf.py  getting.rst  index.rst  make.bat  usage.rst
doc/_templates/: layout.html  page.html
doc/apidoc/: modules.rst
hdlparse/: minilexer.py  verilog_parser.py  vhdl_parser.py
